<resources>
    <string name="app_name">BlogApp_CustomBackend</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password_text">Don\'t have an account? Register now</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="cancel_and_go_back">Cancel and go back</string>
    <string name="test_description">Test Description</string>
    <string name="textview">TextView</string>
    <string name="test_title">Test Title</string>
    <string name="action_delete_all">delete all posts</string>
    <string name="remove_image_url">remove image</string>
    <string name="add_image_url">add image</string>
    <string name="add">ADD</string>
    <string name="enter_image_url">Enter Image URL</string>
    <string name="add_another_image">Add Another Image</string>
    <string name="action_logout">logout</string>
    <string name="action_info">show user info</string>
    <string name="issued_at">Issued At:</string>
    <string name="expired_at">Expired At:</string>
    <string name="test_name">test name</string>
    <string name="test_content">test content</string>
</resources>