<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:elevation="30dp"
    tools:context=".screens.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="100dp"
            android:paddingEnd="32dp"
            android:paddingBottom="200dp">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/register"
                        android:textColor="@color/purple"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:startIconDrawable="@drawable/ic_username"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/username"
                            android:padding="8dp"
                            android:paddingStart="40dp"
                            android:textSize="16sp"
                            tools:ignore="RtlSymmetry" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:startIconDrawable="@drawable/ic_password"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/re_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:padding="8dp"
                            android:paddingStart="40dp"
                            android:textSize="16sp"
                            tools:ignore="RtlSymmetry" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        app:boxBackgroundColor="@android:color/transparent"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="1dp"
                        app:startIconDrawable="@drawable/ic_password"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/name"
                            android:padding="8dp"
                            android:paddingStart="40dp"
                            android:textSize="16sp"
                            tools:ignore="RtlSymmetry" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/spinner_bg"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:padding="8dp"
                            android:src="@drawable/ic_password" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/role_spinner"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:textSize="16sp"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/spinner_bg"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/todo"
                            android:padding="8dp"
                            android:src="@drawable/ic_password" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/second_role_spinner"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:padding="8dp"
                            android:textSize="16sp"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="13dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/purple"
                        android:minHeight="48dp"
                        android:padding="16dp"
                        android:text="@string/register"
                        app:cornerRadius="10dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="13dp"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@color/purple"
                        android:minHeight="48dp"
                        android:padding="16dp"
                        android:text="@string/cancel_and_go_back"
                        app:cornerRadius="10dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
